# dividend-engine

./: .gitignore  README.md  package-lock.json
platform/: index.html  package-lock.json  package.json
platform/src/: App.css  App.tsx
platform/src/components/: ActiveScreenBanner.css  ActiveScreenBanner.tsx  BenchmarkCard.css  BenchmarkCard.tsx  BenchmarkInstruments.css  BenchmarkInstruments.tsx  Dashboard.css  Dashboard.tsx  DividendEngine.css  DividendEngine.tsx  Header.css  Header.tsx  OptionsModal.css  OptionsModal.tsx  OptionsModalHeader.tsx  OptionsTable.tsx  OrderHistory.css  OrderHistory.tsx  OrderModal.css  OrderModal.tsx  Sidebar.css  Sidebar.tsx  TickerCard.css  TickerCard.tsx  WatchlistModal.css  WatchlistModal.tsx  YieldCurve.css  YieldCurve.tsx
server/: database.py  main.py  pyproject.toml
server/app/: main.py  models.py
server/app/endpoints/: orders.py  users.py  yields.py
server/app/logic/: yields.py
server/app/screener/: endpoints.py  options.py  schemas.py  screener.py  universe.py
server/app/screener/providers/: __init__.py  base.py  tradier_provider.py  yfinance_provider.py
