[project]
name = "treasury-yield-api"
version = "0.1.0"
description = "Treasury yield curve API for liquidity management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "cachetools>=5.3.0",
]

[dependency-groups]
dev = []
